feat: add Javadoc and tests for MatchOnly entities and related services